@@ -47,6 +47,7 @@ Changes:
 - Upgrade xmd to 0.3.6.
 
 Fixes:
+- Missing mount_fusefs in /usr/local/sbin.
 - Missing usb device configuration file.
 - Missing default pkg repository.
 - mount_ntfs is not installed to /sbin.
